--- a/typescript-example/client/game.html
+++ b/typescript-example/client/game.html
@@ -2,5 +2,6 @@
   html, body { padding: 0; margin: 0; display: flex }
   iframe { width: 50vw; height: 100vh; border: none; }
 </style>
+<script src="/node_modules/deep-diff/dist/deep-diff.min.js"></script>
 <script src="/node_modules/socket.io-client/dist/socket.io.js"></script>
 <script type="module" src="dist/main.mjs"></script>
