--- a/typescript-example/client/game.html
+++ b/typescript-example/client/game.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <style>
   html, body { padding: 0; margin: 0; display: flex }
   iframe { width: 50vw; height: 100vh; border: none; }
