--- a/typescript-example/client/index.html
+++ b/typescript-example/client/index.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html>
+<link rel="icon" href="data:;" />
 <style>
   html, body { padding: 0; margin: 0; display: flex }
   iframe { width: 50vw; height: 100vh; border: none; }
